# pydrodelta

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  a5.py  analysis.py  cli.py  config_empty.json  examples.py  notebook.ipynb  pyproject.toml  requirements.txt  setup.py  test_adjust.ipynb  test_adjust_salidas_288.ipynb  test_batch_process.ipynb  test_bordes_curados.ipynb  test_stepwise.ipynb  util.py
config/: config_empty.yml
data/notebooks/: bajo_uruguay.ipynb  ejemplo_readSeries.ipynb  gualeguay_rt_dummy.ipynb  plan_bajo_uruguay.ipynb  test_batch_process.ipynb  test_bordes_curados.ipynb  test_roundDate.ipynb  test_salidas_adjust.ipynb
data/plans/: UruguayBajo.json  bajo_uruguay.json  bajo_uruguay.yml  bajo_uruguay_salida_hec.yml  gualeguay_rt_dummy.json
data/schemas/: plan.json  plan.yml  serie.json  topology.json  topology.yml
data/topologies/: 288_ajuste_salidas.json  288_ajuste_salidas.yml  288_bordes_curados.json  288_bordes_curados15d.json  288_bordes_curados15d.yml  288_short.json  bajo_uruguay.json  bajo_uruguay.yml  bajo_uruguay_salida_hec.yml  gualeguay_rt_dummy.json  hidrodelta_bordes.json
pydrodelta/: a5.py  analysis.py  examples.py  util.py
pydrodelta_config/: 288_ajuste_salidas.json  288_bordes_curados.json  288_bordes_curados15d.json  288_config.json  288_short.json  bajo_uruguay.json  sfer_marea_adjust.json
schemas/: boundary-set.json  topology.json
src/pydrodelta/: __init__.py  a5.py  analysis.py  hecras.py  muskingumchannel.py  polynomial.py  procedure_function.py  pydrology.py  simulation.py  util.py  validation.py
(+18 files in other folders)
